<resources>
    <string name="label_searchable">Apps in Island</string>
    <string name="tab_mainland">Mainland</string>
    <string name="tab_island">Island</string>
    <string name="tab_discovery">Discovery</string>
    <string name="status_alive">Alive</string>
    <string name="status_frozen">Frozen</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_uninstalled">Not installed</string>
    <string name="status_appendix_system">system</string>
    <string name="status_appendix_critical">critical</string>
    <string name="status_appendix_cloned">cloned</string>
    <string name="status_appendix_exclusive">only in Island</string>
    <string name="featured_button_setup">Setup</string>
    <string name="featured_button_install">Install</string>
    <string name="featured_file_shuttle_title">File Shuttle</string>
    <string name="featured_file_shuttle_description">File Shuttle provides cross-border file access and makes managing files inside Island much easier. It requires manual permission granting with ADB via USB-connected PC to activate.</string>
    <string name="featured_fx_title">FX File Explorer</string>
    <string name="featured_fx_description">File Shuttle of Island provides cross-border file access via Android \"Storage Access Framework\". But not all apps in the wild (even some popular file manage apps) support SAF.\n\nFX File Explorer has full support for SAF, just clone and launch it inside Island, select \"Connect to Storage\" in drop-down menu. The File Shuttle of Island is in the side menu.</string>
    <string name="featured_adb_secure_title">ADB Secure</string>
    <string name="featured_adb_secure_island_title">ADB Secure (for Island space only)</string>
    <string name="featured_adb_secure_description">Restrict ADB (Android Debugging Bridge) shell from executing dangerous commands (install APK, change settings and etc.).\n\nIf "God mode" is activated, this could protect the whole device (including data sniffing or sneaky app installation via USB cable from physically connected external device).</string>
    <string name="featured_god_mode_title">God Mode</string>
    <string name="featured_god_mode_description">\"God mode\" is a special mode of Island for advanced users, to help you take control of ALL apps (in both island and mainland). So you can freeze unwanted apps without root.</string>
    <string name="featured_greenify_title">Greenify</string>
    <string name="featured_greenify_description">Automatically freeze selected apps if not in active use, after screen goes off.</string>
    <string name="featured_saf_enhancer_title">SAF Enhancer Lite</string>
    <string name="featured_saf_enhancer_description">Enable cross-border image access for app not supporting \"Storage Access Framework\", provided it supports photo capture with external camera app.</string>
    <string name="featured_icebox_title">Ice Box</string>
    <string name="featured_icebox_description">Easy and pleasant app launching experience for frozen apps. Be sure to select \"Island\" as Work Mode in the settings of Ice Box. To manage apps in Island, clone Ice Box and launch it in Island.</string>
    <string name="featured_appops_title">App Ops</string>
    <string name="featured_appops_description">Island is incapable to block apps from accessing device-level data (e.g. IMEI, SMS). AppOps is a powerful tool to selectively block such accesses gracefully from specified apps.</string>
    <string name="featured_coolapk_title">CoolApk</string>
    <string name="featured_coolapk_description">Upgrade frozen apps easily, no need to unfreeze them first. (\"Show hidden apps\" must be enabled in the \"labs settings\" of CoolApk)\n\nTo upgrade apps solely installed in Island, you still need to use the clone of CoolApk inside Island.</string>
    <string name="setup_profile_welcome">Welcome</string>
    <string name="setup_island_intro">\"Island\" is a sandbox environment to clone selected apps and isolate them from accessing your personal data
outside (including call logs, contacts and etc) even if permissions are granted.
\n\nCloned app runs parallel aside from the installed one with its separate copy of app data. It can also be frozen on demand, with launcher icon
vanished and its background behaviors completely blocked.
\n\nBy creating the sandbox environment, you authorize Island to act as device administrator of \"Android for Work\", with the privilege to manage
the sandbox environment. Island never collect data related to your privacy, please read our privacy policy on Google Play Store for more details.</string>
    <string name="setup_accept">Accept</string>
    <string name="setup_error_multi_user_not_allowed">Sorry, the required \"Multi-User\" feature is not supported on this device.</string>
    <string name="setup_error_managed_profile_not_supported">Sorry, the required feature \"Managed Profile\" is not supported on this device.</string>
    <string name="setup_error_provisioning_incomplete">Island setup is incomplete, the previous attempt might be unsuccessful.\n\nIf your device ROM or 3rd-party tool enforce auto-start control (or similar background-restriction functionality), please whitelist Island in related settings, then continue the setup.</string>
    <string name="setup_error_managed_device">Sorry, Island cannot be setup due to device currently being managed by <b>%1$s</b>.</string>
    <string name="setup_error_other_work_profile">Sorry, \"Work profile\" was setup on this device already by other app. To use Island, the existent Work Profile must be removed first in system Settings - Accounts.</string>
    <string name="setup_error_missing_managed_provisioning">Sorry, the required \"Android for Work\" feature may not be fully supported on your device.</string>
    <string name="setup_solution_for_cancelled_provision">Trouble setting-up Island?\n\nIf you got error message during the setup procedure of Island, please continue to open the online troubleshooting guide with suggested solutions.\n\nIf all the solutions do not work and your device is rooted, you can alternatively setup Island with root.</string>
    <string name="tip_empty_app_list">No apps here.\nPlease switch to other view.</string>
    <string name="field_app_id">APP ID: %1$s</string>
    <string name="button_instructions_online">Instructions (online)</string>
    <string name="button_account_settings">Account Settings</string>
    <string name="button_have_checked">I\'ve checked</string>
    <string name="button_setup_troubleshooting">Troubleshooting (web)</string>
    <string name="button_setup_island_with_root">Setup Island with root</string>
    <string name="action_clone">Clone</string>
    <string name="action_clone_back">Clone to mainland</string>
    <string name="action_freeze">Freeze</string>
    <string name="action_unfreeze">Unfreeze</string>
    <string name="action_shortcut">Create Unfreeze &amp; Launch shortcut</string>
    <string name="action_greenify">Auto-freeze with Greenify</string>
    <string name="action_app_settings">App settings</string>
    <string name="action_remove">Remove</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_activate">Activate</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="menu_tip">Tip…</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_settings">Settings</string>
    <string name="filter_include_hidden_system_components">+ Hidden System Components</string>
    <string name="dialog_title_warning">WARNING</string>
    <string name="dialog_manual_setup"><b>For advanced user</b>:\nThis limitation could also be circumvented with one-time manual setup via USB-connected PC.</string>
    <string name="dialog_encryption_required"><b>DEVICE ENCRYPTION</b> is required on your device to create the island, enforced by Android system prior to 7.0. Encrypting the device may degrade the overall performance on some low-end devices. Encryption can be skipped if root privilege is available and granted in the next step.</string>
    <string name="dialog_clone_via_install_explanation">Island will now launch the Android installer to \"install\" this app in Island.\n\nAlthough it looks like the regular installation confirmation, actually it takes no extra storage space.</string>
    <string name="dialog_clone_via_google_play_explanation">Island will now launch Google Play Store to clone this app, please then click the \"Install\" button there.\n\nAlthough it will look like the regular installation, actually it will take no extra storage space but just activates this app in Island.</string>
    <string name="dialog_clone_via_sys_market_explanation">Island will now launch the built-in app store on your device to clone this app, please follow the regular installation procedure.\n\nATTENTION: The built-in app store on your device may or may not support Android for Work properly. In case it fails to finish the installation, please refer to the FAQ for solutions.</string>
    <string name="dialog_clone_incapable_explanation">Sorry, Island cannot clone apps without a proper built-in app market on your device (preferable Google Play Store) until Android 5.1. Please refer to the FAQ for solutions.</string>
    <string name="dialog_greenify_title">Greenify integration</string>
    <string name="dialog_greenify_explanation">To save memory and avoid unnecessary battery consumption, Island has no background services in design. Instead it delegates the automatic freezing job to Greenify, taking advantage of its sophisticated automatic hibernation management.</string>
    <string name="dialog_greenify_version_too_low">Greenify needs to be upgraded to a newer version.</string>
    <string name="dialog_reactivate_message">Island was unexpectedly deactivated, please grant the Device Admin permission to re-activate.</string>
    <string name="dialog_destroy_message">Are you sure you want to destroy the whole Island? You will LOSE ALL THE DATA IN ISLAND.\n\nDon\'t worry, apps and data outside Island will NEVER be affected.</string>
    <string name="dialog_destroy_exclusives_message">Since exclusively installed in Island, the following %1$d app(s) will be UNINSTALLED effectively from your device if Island is destroyed.\n\n%2$s\n\nAre you sure you want to proceed?</string>
    <string name="dialog_deactivate_message">Are you sure to deactivate God mode?\n\nYou will have to go through the setup flow again to bring it back, that means Island space and all accounts must be removed first if your device is not rooted.</string>
    <string name="dialog_cannot_destroy_message">To remove the whole Island space, please open system \"Settings - Accounts\" and select \"Remove work profile\".</string>
    <string name="dialog_critical_app_warning">This app (or component) is critical for the Android system or other apps to work properly. If proceed, some apps or the whole system may become unstable or malfunctional.\n\nDo you really want to proceed?</string>
    <string name="dialog_reinstall_system_app_warning">This system app (or component) is not installed for some reason. If proceed, the whole system may become unstable or malfunctional.\n\nDo you really want to proceed?</string>
    <string name="pref_general_header">General</string>
    <string name="pref_setup_header">Setup &amp; Shutdown</string>
    <string name="pref_about_header">About</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_about_open_source_title">Island is open source</string>
    <string name="pref_about_open_source_summary">Welcome to visit us on GitHub</string>
    <string name="pref_about_licenses_title">Licenses</string>
</resources>